# grpc-python-book-server

./: protoc-gen.sh  pyproject.toml  server.py
grpc_python_book_server/: book_service.py
protos/: book_service_pb2.py  book_service_pb2_grpc.py
tests/: test_grpc_python_book_server.py
